objects/ssot__InventoryRequest__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DestinationLocationId__c</fullName>
        <label>Destination Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Inventory Request Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InventoryRequestNumber__c</fullName>
        <label>Inventory Request Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InventoryRequestStatus__c</fullName>
        <label>Inventory Request Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InventoryRequest_CaseId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InventoryRequest_CaseId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>InventoryRequest_CaseId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>InventoryRequest_CaseId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__InventoryRequest_OwnerId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InventoryRequest_OwnerId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>InventoryRequest_OwnerId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>InventoryRequest_OwnerId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__NeedByDateTime__c</fullName>
        <label>Need By DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerObject__c</fullName>
        <label>Owner Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShipToAddressId__c</fullName>
        <label>Ship To Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShipToGeocodeAccuracyType__c</fullName>
        <label>Ship To Geocode Accuracy Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShipToLatitude__c</fullName>
        <label>Ship To Latitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ShipToLongitude__c</fullName>
        <label>Ship To Longitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ShipmentType__c</fullName>
        <label>Shipment Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceLocationId__c</fullName>
        <label>Source Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrderId__c</fullName>
        <label>Work Order</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrderItemId__c</fullName>
        <label>Work Order Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1710432555671_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InventoryRequest_SourceLocationId_ma_rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>InventoryRequest_SourceLocationId_ma_rel</relationshipLabel>
        <relationshipName>rel_1710432555671_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1710432569739_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InventoryRequest_DestinationLocation_rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>InventoryRequest_DestinationLocation_rel</relationshipLabel>
        <relationshipName>rel_1710432569739_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1710432583127_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InventoryRequest_ShipToAddressId_map_rel</label>
        <referenceTo>ssot__Address__dlm</referenceTo>
        <relationshipLabel>InventoryRequest_ShipToAddressId_map_rel</relationshipLabel>
        <relationshipName>rel_1710432583127_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>